@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 10-01-2006 changed: disabled seeking when ff/rw in menu and partially fixed rewind. only fast rewinds work
  - 10-01-2006 added: workaround to the playlist problem with randomize that will prevent the hang, but the underlying problem still exists.
  - 10-01-2006 fixed: dvdplayer: some vobs reported a wrong totaltime, as playback progressed totaltime decreased rapidly and no seeking was possible. 
  - 10-01-2006 fixed: changed to use libmpeg2 for mpeg1 caused ffmpeg to be used for everything instead in dvdplayer
